--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 $font-stack: Helvetica, sans-serif;
-$primary-color: #ddf234;
+$primary-color: #ddfddd;
 
 body {
   background-color: $primary-color;
