Добавлены роуты в Header

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,5 @@
-$font-stack: Helvetica, sans-serif;
-$primary-color: #ddd;
-
 body {
-  background-color: $primary-color;
-  color: #534343;
-  font: 100% $font-stack;
-}
-
-h1 {
-  color: #000;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
