--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+    <!--
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" href="/favicons/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="/favicons/favicon-16x16.png" sizes="16x16"/>
+    <link rel="manifest" href="/favicons/manifest.json"/>
+    <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5"/>
+    <meta name="theme-color" content="#ffffff"/>
+    <link rel="icon" type="image/vnd.microsoft.icon" href="/favicons/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicons/favicon.ico"/>
+    -->
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript" src="/config.js"></script>
   </body>
 </html>
