--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -1,37 +1,21 @@
-.slide-appear {
+.fade-appear {
   opacity: 0;
-  transform: translateX(30px);
+  transform: translateY(5rem);
 }
 
-.slide-appear
-.slide-appear-active {
+.fade-appear.fade-appear-active {
   opacity: 1;
-  transform: translateX(0);
-  transition: all 0.6s linear;
+  transform: translateY(0);
+  transition: all 0.3s linear;
 }
 
-.slide-enter {
+.fade-enter {
   opacity: 0;
-  transform: translateX(30px);
+  transform: translateY(5rem);
 }
 
-.slide-enter
-.slide-enter-active {
+.fade-enter.fade-enter-active {
   opacity: 1;
-  transform: translateX(0);
-  transition: all 0.2s linear 0.4s;
-}
-
-.slide-leave {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-.slide-leave
-.slide-leave-active {
-  opacity: 0;
-  position: absolute;
-  transform: translateX(-30px);
-  transition: all 0.2s linear;
-  width: 100%;
+  transform: translateY(0);
+  transition: all 0.3s linear;
 }
