--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,9 +16,18 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="/favicons/favicon.ico"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicons/favicon.ico"/>
     -->
+    <!--[if IE]><% for (var css in htmlWebpackPlugin.files.css) { %><link rel="stylesheet" href="<%=htmlWebpackPlugin.files.css[css] %>"/><% } %><![endif]-->
   </head>
   <body>
     <div id="root"></div>
+    <!--[if !IE]> -->
+      <% for (var css in htmlWebpackPlugin.files.css) { %>
+      <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.css[css] %>" lazyload="1"/>
+      <% } %>
+    <!-- <![endif]-->
     <script type="text/javascript" src="/config.js"></script>
+    <% for (var js in htmlWebpackPlugin.files.js) { %>
+      <script type="text/javascript" src="<%=htmlWebpackPlugin.files.js[js] %>"/>
+    <% } %>
   </body>
 </html>
