--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -27,7 +27,8 @@
     <!-- <![endif]-->
     <script type="text/javascript" src="/config.js"></script>
     <% for (var js in htmlWebpackPlugin.files.js) { %>
-      <script type="text/javascript" src="<%=htmlWebpackPlugin.files.js[js] %>"/></script>
+      <%=htmlWebpackPlugin.files.js[js] %>
+      <script type="text/javascript" src="<%=htmlWebpackPlugin.files.js[js] %>"></script>
     <% } %>
   </body>
 </html>
