Добавить промежуточные результаты по сканеру

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,12 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* stylelint-disable */
+.drawing,
+.drawingBuffer {
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+/* stylelint-enable */
