--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+    <link rel="shortcut icon" href="/favicon120x120.ico" type="image/x-icon">
     <!--
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png"/>
     <link rel="icon" type="image/png" href="/favicons/favicon-32x32.png" sizes="32x32"/>
